--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -7,25 +7,20 @@ h2, h3 {
     color: black;
     font-weight: initial;
     font-style:normal;
+    text-align: center;
     margin: 0;
     /* line-height: 40px; */
-    padding-bottom: 10px;
-    width: 50%;
+    width: 100%;
     display: inline-block;
 }
 h3 {
     font-size: 16px;
     width: 100%;
-    padding-bottom: 0;
     padding: 0;
     margin: 0;
-    height: 30px!important;
+    height: 20px!important;
     font-family: 'IBM Plex Mono', monospace;
-}
-.meta h3 {
-    line-height: 12px;
-    height: 10px !important;
-    /* transform: translateY(-20px); */
+    transform: translateY(-10px);
 }
 .meta {
     display: flex;
@@ -48,8 +43,7 @@ h2 {
     padding: 0;
 }
 h2:first-child{
-    /* margin-top: 30px; */
-    transform: translateY(5px);
+    margin-top: 30px;
 }
 @media screen and (max-width : 800px) {
     .meta, h2 {
